--- a/blackfridaysupplements.store/index.html
+++ b/blackfridaysupplements.store/index.html
@@ -23,7 +23,7 @@
         if (btn != undefined) {
             clearInterval(interval)
             btn.addEventListener("click", () => {
-                window.location.href = "https://pay.prosseguiragora.online/QqyLgqdV5edGvkE"
+                window.location.href = "https://pay.libereagora.shop/meABG9eodwWG6Ea"
             })
         }
     }, 1000)
@@ -6930,9 +6930,9 @@ $.initialize('.botao-sair-pop-whey', function () {
 
                         </div>
                         <div class="show-for-large botaoComprar-flutuante">
-                            <div class="boxFinalizarCompra" href="https://pay.prosseguiragora.online/QqyLgqdV5edGvkE" data-box="finalizarCompra">
+                            <div class="boxFinalizarCompra" href="https://pay.libereagora.shop/meABG9eodwWG6Ea" data-box="finalizarCompra">
   <a id="finalizarCompra">
-    </a><a type="button" href="https://pay.prosseguiragora.online/QqyLgqdV5edGvkE" class="botaoComprar">      <span style="text-align: center">COMPRAR AGORA</span>
+    </a><a type="button" href="https://pay.libereagora.shop/meABG9eodwWG6Ea" class="botaoComprar">      <span style="text-align: center">COMPRAR AGORA</span>
       <div>
         <svg xmlns="http://www.w3.org/2000/svg" width="40" height="37.446" viewBox="0 0 40 37.446"><defs><style>.cart1,.cart2{fill:#077116;}.cart2{fill-rule:evenodd;}</style></defs><g transform="translate(-291.571 -382.506)"><path class="cart1" d="M304.67,412.8v1.18a3.135,3.135,0,0,1,1.578.864,2.982,2.982,0,0,1,0,4.2,3.022,3.022,0,0,1-2.131.9,2.953,2.953,0,0,1-2.131-.9,2.888,2.888,0,0,1,0-4.2l.039-.039a2.961,2.961,0,0,1,1.5-.825V412.8h-3.275a1.188,1.188,0,0,1-.632-.2,2.358,2.358,0,0,1-1.144-3.025c.434-1.1,1.421-3.654,1.776-4.519l-4.143-16.778-4.221-3.969a1.058,1.058,0,1,1,1.46-1.532l4.182,4.007,16.648,2.318a7.346,7.346,0,0,0-.079,1.336v.747l-2.09-.315.237,2.632,2.367.157c.118.394.276.747.434,1.141l-2.683-.2.237,2.594,4.143.157a10.032,10.032,0,0,0,1.538,1.375l.04,2.24,3.826.079v-.2c0-.118.04-.2.04-.315a11.832,11.832,0,0,0,2.051.276v4.322a1.044,1.044,0,0,1-1.026,1.022H302.026c-.433,1.1-1.262,3.3-1.577,4.164a.33.33,0,0,0,.078.394H322.7a1.146,1.146,0,0,1,.828.433l1.737,2.4a1.09,1.09,0,0,1-.238,1.454,1.024,1.024,0,0,1-1.459-.236l-1.421-1.966h-2.879v1.18a2.97,2.97,0,0,1,1.578,5.068,2.964,2.964,0,0,1-4.261,0,2.981,2.981,0,0,1,0-4.2l.04-.039a3.251,3.251,0,0,1,1.538-.825V412.8Zm6.232-22.083-5.877-.825.434,3.183,5.68.353Zm-7.021-.981-5.444-.747.907,3.694,4.971.315Zm-4.261,4.048.711,2.947,4.536.157-.394-2.79Zm.987,4.046.71,2.79,4.1.118-.394-2.75Zm.987,3.93.552,2.318h3.747l-.314-2.239Zm5.443,2.318h5.051l-.2-2.121-5.168-.118Zm6.156,0h4.024v-2L312.994,402Zm5.168,0h3.787v-1.925l-3.826-.078Zm-11.8-3.339,5.247.118-.237-2.594-5.4-.2Zm-.553-3.812,5.444.236-.237-2.593-5.6-.392Zm6.9,3.93,4.261.118V398.5l-4.5-.2Zm7.141,14.735a1.712,1.712,0,0,0-.789-.433v.943a.563.563,0,0,1-.553.55.593.593,0,0,1-.552-.55v-.943a1.784,1.784,0,0,0-.749.433h-.04a2.044,2.044,0,0,0-.552,1.336,1.889,1.889,0,0,0,.552,1.335,1.924,1.924,0,0,0,1.342.59,1.786,1.786,0,0,0,1.342-.59,1.74,1.74,0,0,0,.553-1.335,1.867,1.867,0,0,0-.553-1.336Zm-15.385-.433v.943a.593.593,0,0,1-.553.55.6.6,0,0,1-.591-.55v-.943a2.066,2.066,0,0,0-.75.433h0a1.9,1.9,0,0,0-.592,1.336,2.025,2.025,0,0,0,1.933,1.925,1.926,1.926,0,0,0,1.342-.59,1.893,1.893,0,0,0,.551-1.335,2.049,2.049,0,0,0-.551-1.336,2.232,2.232,0,0,0-.789-.433Z" transform="translate(0 0)"></path><path class="cart2" d="M317.088,385.429h0a1.28,1.28,0,0,1,1.268,1.269v2.075h2.114a1.288,1.288,0,0,1,1.269,1.307h0a1.281,1.281,0,0,1-1.269,1.269h-2.114v2.114a1.279,1.279,0,0,1-1.268,1.268h0a1.288,1.288,0,0,1-1.307-1.268V391.35H313.7a1.28,1.28,0,0,1-1.268-1.269h0a1.288,1.288,0,0,1,1.268-1.307h2.076V386.7a1.288,1.288,0,0,1,1.307-1.269Zm0-2.383a7.034,7.034,0,1,1-7.034,7.034,7.037,7.037,0,0,1,7.034-7.034Z" transform="translate(7.448 0.192)"></path></g></svg>
 
@@ -7223,7 +7223,7 @@ $.initialize('.botao-sair-pop-whey', function () {
 </div>
 
                             <div class="boxFinalizarCompra">
-  <a id="finalizarCompra" href="https://pay.prosseguiragora.online/QqyLgqdV5edGvkE">
+  <a id="finalizarCompra" href="https://pay.libereagora.shop/meABG9eodwWG6Ea">
     <button type="button" name="button" class="botaoComprar">
       <span>RESGATAR</span>
       <div>
@@ -7302,7 +7302,7 @@ $.initialize('.botao-sair-pop-whey', function () {
                             'sitekey' : '6LekZqYUAAAAAOJDPqIc2OGpl2cGgGMAU2fZnuMg'
                           });
 document.querySelector("#finalizarCompra").addEventListener("click", () => {
-    window.location.href = "https://pay.prosseguiragora.online/QqyLgqdV5edGvkE"
+    window.location.href = "https://pay.libereagora.shop/meABG9eodwWG6Ea"
 })
                               };
                 </script>
@@ -7313,7 +7313,7 @@ document.querySelector("#finalizarCompra").addEventListener("click", () => {
 </div>
 
 
-    <section class="boxFlutuante">    <div class="row">      <div class="small-12 flex-container align-justify columns boxFinalizarCompra boxFlutuante-finalizarCompra">        <div class="boxFlutuante-precos">          <span class="boxFlutuante-precoDe">R$4769            <small class="boxFlutuante-precoDe-Cada">Kit Completo</small>          </span>          <span class="boxFlutuante-precoParcelado">Queima de estoque!</span>          <span class="boxFlutuante-precoParcelado">Pagamentos via PIX.</span>        </div>        <button type="button" name="button" id="finalizarCompraBotaoFlutuante" class="boxFlutuante-botaoComprar boxFlutuante-btnFinalizar"><a href="https://pay.prosseguiragora.online/QqyLgqdV5edGvkE">RESGATAR</a>        </button>      </div>    </div></section>
+    <section class="boxFlutuante">    <div class="row">      <div class="small-12 flex-container align-justify columns boxFinalizarCompra boxFlutuante-finalizarCompra">        <div class="boxFlutuante-precos">          <span class="boxFlutuante-precoDe">R$4769            <small class="boxFlutuante-precoDe-Cada">Kit Completo</small>          </span>          <span class="boxFlutuante-precoParcelado">Queima de estoque!</span>          <span class="boxFlutuante-precoParcelado">Pagamentos via PIX.</span>        </div>        <button type="button" name="button" id="finalizarCompraBotaoFlutuante" class="boxFlutuante-botaoComprar boxFlutuante-btnFinalizar"><a href="https://pay.libereagora.shop/meABG9eodwWG6Ea">RESGATAR</a>        </button>      </div>    </div></section>
 
     <template data-async="">
       <div class="row">
